completed top quarter

--- a/index.html
+++ b/index.html
@@ -17,14 +17,16 @@
           <li>header link three</li>
         </ul>
     </div>
-      <div class = "content">
+    <div class = "content">
         <div class = "sign-up">
             <h1>This website is awesome</h1>
             <p>This webiste has some text to take up space. Eventually, there will be text placed here of meaningfull value. But not yet...</p>
-            <div class = "sign-up">Sign up</div>
+            <div class = "blue">
+              <button type = "button">Sign up</button>
+            </div>
         </div>
         <img src = "img/sample.jpg" alt = "pic place holder">
-      </div>
+    </div>
   </div>
   
 </body>
