final quarter finished

--- a/index.html
+++ b/index.html
@@ -43,13 +43,40 @@
     </div>
     <div class = info>
       <img src="img/javascript-logo.jpg" alt="javascritp logo">
-      <div class = "text">his is text that will one day be filled with meaningful information. Today is not that day...</div>
+      <div class = "text">This is text that will one day be filled with meaningful information. Today is not that day...</div>
     </div>
     <div class = info>
       <img src="img/mhm-logo.jpg" alt="mhm logo">
-      <div class = "text">his is text that will one day be filled with meaningful information. Today is not that day...</div>
+      <div class = "text">This is text that will one day be filled with meaningful information. Today is not that day...</div>
     </div>
   </div>
+</div>
+
+<div class = "third-quarter">
+  <div class="quote">
+    <p><i>“I’m going to be gone one day, and I have to accept that tomorrow isn’t promised. Am I OK with how I’m living today? It’s the only thing I can help. If I didn’t have another one, what have I done with all my todays? Am I doing a good job?”</i></p>
+  </div>
+  <div class="speaker">
+    — Hayley Williams
+  </div>
+
+</div>
+
+<div class = "fourth-quarter">
+
+  <div class="blue-bar">
+    <div class = "words">
+      <h3><b>Now is the time to Sign Up!</b></h3>
+      <p>Press the button on the right to sign up</p>
+    </div>
+     <button type="button">Sign up</button>
+  </div>
+</div>
+
+<footer>
+  <p>Copyright <span>&#169</span> The Odin Project 2021</p>
+</footer>
+
 
 </div>
 </body>
